[project]
name = "tokn_nautrw"
version = "0.1.0"
authors = [
    { name = "nautrw", email="nautrw@proton.me" }
]
description = "CLI tool to store TOTP secret keys and generate codes"
dependencies = [
    "click==8.3.3",
    "pyotp==2.9.0",
    "cryptography==46.0.6",
    "platformdirs==4.10.0",
    "zxing-cpp==3.0.0",
    "opencv-python-headless==4.13.0.92",
    "pytest==9.0.3",
]
requires-python = ">= 3.6"
license = "MIT"
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.scripts]
tokn = "tokn.cli:cli"

[project.urls]
Homepage = "https://github.com/nautrw/tokn"
Repository = "https://github.com/nautrw/tokn.git"
Issues = "https://github.com/nautrw/tokn/issues"
CI = "https://github.com/nautrw/tokn/actions"

[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
